2005-05-21  Benhur Stein <benhur@inf.ufsm.br>
	* General/SourceCodeReference.m: unify references

2005-05-21  Benhur Stein <benhur@inf.ufsm.br>
	* StorageController/Encapsulate.m, General/PajeFilter.[hm]:
	  new -entitySelectionChanged notification and -isSelectedEntity:
	  query
	* SpaceTimeViewer/DrawView+Drawing.m: use new query to highlight
	  selected entities
	* FieldFilter/FieldFilter.gorm,
	  FieldFilter/FieldFilterDescriptor.[hm], FieldFilter/FieldFilter.[hm]:
	  Add action to perform when applying filter (filter in, filter out or
	  highlight)
	* General/NSString+Additions.m: fix a bug in line numbering
	* General/SourceTextViewer.gorm, General/SourceTextController.[mh]:
	  correct buggy gorm file, show selected line number.

2005-05-21  Benhur Stein <benhur@inf.ufsm.br>
	* ReductionFilter/BusyArray.[hm], ReductionFilter/BusyDate.m,
	  ReductionFilter/ReduceEntity.m: fix memory leak

2005-05-07  Benhur Stein <benhur@inf.ufsm.br>
	* PajeSimulator/SimulContainer.m [-start/endUserLink...]: code cleanup

2005-05-07  Benhur Stein <benhur@inf.ufsm.br>
	* PajeSimulator/SimulContainer.m
          [-enumeratorOfEntitiesTyped:fromTime:toTime:]: new method
        * StorageController/Encapsulate.m
          [-enumeratorOfEntitiesTyped:inContainer:fromTime:toTime:]: call
          new method in container

2005-04-30  Benhur Stein <benhur@inf.ufsm.br>
	* General/NSColor+Additions.m (-contrastingWhiteOrBlackColor):
	  use less contrasting colors
	* Paje/PajeController.m (-loadAllBundles): load StatViewer bundle
	* Paje/PajeTraceController.m (-createComponentGraph): inatantiate and
	  connect statViewer to component graph; some small changes to remove
	  compiler warnings
	* PajeEventDecoder/PajeEventDecoder.m: commented some unused code
	* StatViewer/PieCell.h StatViewer/PieCell.m StatViewer/StatArray.h
	  StatViewer/StatArray.m StatViewer/StatValue.h StatViewer/StatValue.m
	  StatViewer/StatViewer.gorm StatViewer/StatViewer.h
	  StatViewer/StatViewer.m: new files
